@@ -131,49 +131,26 @@ function listCampaign($pDB, $smarty, $module_name, $local_templates_dir)
     }
 
     // para el pagineo
-    $limit = 50;
-    $offset = 0;
-
-    $url = construirURL(
-        array('menu' => $module_name, 'cbo_estado' => $sEstado),
-        array('nav', 'start'));
-
-    //$arrCampaign = $oCampaign->getCampaigns(null, $offset, NULL, $sEstado);
+    $oGrid = new paloSantoGrid($smarty);
+    $oGrid->setLimit(50);
     $total = $oCampaign->countCampaigns($sEstado);
     if (is_null($total)) {
         $smarty->assign("mb_title", _tr('Read Error'));
         $smarty->assign("mb_message", _tr('Unable to count campaigns').' - '.$arrCampaign->errMsg);
         $total = 0;
-    }
-//    $total  = count($arrCampaign);
-
-    // Si se quiere avanzar a la sgte. pagina
-    if(isset($_GET['nav']) && $_GET['nav']=="end") {
-        // Mejorar el sgte. bloque.
-        if(($total%$limit)==0) {
-            $offset = $total - $limit;
-        } else {
-            $offset = $total - $total%$limit;
+    } else {
+        $oGrid->setTotal($total);
+        $offset = $oGrid->calculateOffset();
+        $arrCampaign = $oCampaign->getCampaigns($oGrid->getLimit(), $offset, NULL, $sEstado);
+        if (is_null($arrCampaign)) {
+            $smarty->assign("mb_title", _tr('Read Error'));
+            $smarty->assign("mb_message", _tr('Unable to read campaigns').' - '.$arrCampaign->errMsg);
         }
     }
 
-    // Si se quiere avanzar a la sgte. pagina
-    if(isset($_GET['nav']) && $_GET['nav']=="next") {
-        $offset = $_GET['start'] + $limit - 1;
-    }
-
-    // Si se quiere retroceder
-    if(isset($_GET['nav']) && $_GET['nav']=="previous") {
-        $offset = $_GET['start'] - $limit - 1;
-    }
-
-    $arrCampaign = $oCampaign->getCampaigns($limit, $offset, NULL, $sEstado);
-    if (is_null($arrCampaign)) {
-        $smarty->assign("mb_title", _tr('Read Error'));
-        $smarty->assign("mb_message", _tr('Unable to read campaigns').' - '.$arrCampaign->errMsg);
-    }
-
-    $end = count($arrCampaign);
+    $url = construirURL(
+        array('menu' => $module_name, 'cbo_estado' => $sEstado),
+        array('nav', 'start'));
 
     if (is_array($arrCampaign)) {
         foreach($arrCampaign as $campaign) {
@@ -204,9 +181,6 @@ function listCampaign($pDB, $smarty, $module_name, $local_templates_dir)
         "url"      => $url,
         "icon"     => "images/list.png",
         "width"    => "99%",
-        "start"    => ($total==0) ? 0 : $offset + 1,
-        "end"      => ($offset+$limit)<=$total ? $offset+$limit : $total,
-        "total"    => $total,
         "columns"  => array(
                             0 => array("name"      => ''),
                             1 => array("name"      => _tr('Campaign Name')),
@@ -234,7 +208,6 @@ function listCampaign($pDB, $smarty, $module_name, $local_templates_dir)
         'MESSAGE_CONTINUE_DEACTIVATE'   =>  _tr('Are you sure you wish to continue?'),
         'MESSAGE_CONTINUE_DELETE'       =>  _tr('Are you sure you wish to delete campaign?'),
     ));
-    $oGrid = new paloSantoGrid($smarty);
     $oGrid->showFilter($smarty->fetch("$local_templates_dir/filter-list-campaign.tpl"));
     $sContenido = $oGrid->fetchGrid($arrGrid, $arrData,$arrLang);
     if (strpos($sContenido, '<form') === FALSE)
